--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -466,7 +466,7 @@ img {
                           
                             <div class="nav__dropdown-collapse">
                                 <div class="nav__dropdown-content">
-                                    <a href="{% url 'uploaddb_offercode' %}" class="nav__dropdown-item">Upload Subject Offerings</a>
+                                    <a href="{% url 'offercode' %}" class="nav__dropdown-item">Upload Subject Offerings</a>
                                     <a href="{% url 'upload_faculty' %}"  class="nav__dropdown-item">Upload Faculty</a>
                                     <a href="{% url 'upload_facultyload' %}"  class="nav__dropdown-item">Upload Faculty Load</a>
                                     <a href="{% url 'upload_students' %}"   class="nav__dropdown-item">Upload Student</a>
@@ -488,7 +488,7 @@ img {
                             <div class="nav__dropdown-collapse">
                                 <div class="nav__dropdown-content">
                                     <a href="{% url 'view_schooloffices' %}" class="nav__dropdown-item">Offices/School</a>
-                                    <a href="{% url 'uploaddb_department' %}" class="nav__dropdown-item">Department</a>
+                                    <a href="{% url 'view_department' %}" class="nav__dropdown-item">Department</a>
 
                                     
                                 </div>  
