--- a/templates/counselor/feedback_student.html
+++ b/templates/counselor/feedback_student.html
@@ -1,4 +1,4 @@
-{% extends "counselor/modalC.html" %}
+{% extends "counselor/schedule_information.html" %}
 
 
 
@@ -93,7 +93,8 @@ margin-bottom:15px;
   width: 1100px;
     height: 200px;
 }
-.buttons{
+
+.button {
   width: 200px;
   height: auto;
   border: 5em;
@@ -102,40 +103,20 @@ margin-bottom:15px;
   font-size: 16px;
   -webkit-transform: translate(0);
   transform: translate(0);
-  background-image: linear-gradient(45deg, #98b4ac, #d8c090);
+  background-color: #d8c090;
   padding: 0.7em 2em;
   border-radius: 65px;
   box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
   -webkit-transition: box-shadow 0.25s;
-  transition: box-shadow 0.25s;
-  color: white;
-}
-.buttons .text {
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(45deg, #d8c090, #98b4ac);
-}
+   transition: all 0.3s ease 0s;
+    letter-spacing: 2.5px;
+  }
 
-.buttons:after {
-  content: "";
-  border-radius: 18px;
-  position: absolute;
-  margin: 4px;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  background: #E5E4E2;
-}
-
-.buttons:hover {
-  background-image: linear-gradient(-45deg, #98b4ac, #d8c090);
-  box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
-}
-
-.buttons:hover .text {
-  background-image: linear-gradient(-45deg, #d8c090, #98b4ac);
+.button:hover {
+  background-color: #95B9C7;
+  box-shadow: 0px 15px 20px #C9C0BB;
+  color: #fff;
+  transform: translateY(-7px);
 }
 
   </style>
@@ -170,7 +151,7 @@ margin-bottom:15px;
              {{object.remarks}}
              <p class="pText"><b class="bText">Prepared by: &nbsp;</b> {{info2.firstname}} {{info2.lastname}}</p>
             <br> 
-            <button class="buttons" style="font-weight: bold; color: #454545;">Submit</button>
+            <button class="button" style="font-weight: bold; color: #454545;">Submit</button>
             </form>
 
 <br>
