--- a/templates/counselor/detail_feedback.html
+++ b/templates/counselor/detail_feedback.html
@@ -1,82 +1,243 @@
 {% extends "counselor/counselor_home.html" %}
 
 {% block title %} 
-Schedule
+Feedback
 {% endblock %} 
 
 {% block content %} 
 <style>
-#wrapper {
-
-  display: flex;
-  padding: 20px;
-}
-
-#square {
-  min-width: 300px;
-  height: 350px;
-  border-radius: 20px;
-
-  border: 1px solid black;
-  border-radius: 10px;
-      background-color: #98b4ac;
-      box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-  margin: auto;
-  overflow-wrap: break-word;
-}
-
-#box {
+  #wrapper {
   
-  border: 1px solid black;
-border-radius: 10px;
-
+    display: flex;
+    padding: 20px;
+  }
+  
+  #square {
+    min-width: 300px;
+    height: 350px;
+    border-radius: 20px;
+  
+    border: 1px solid black;
+    border-radius: 10px;
+        background-color: #98b4ac;
+        box-shadow:
+          0 9px 33px rgba(0, 0, 0, 0.07);
+    margin: auto;
+    overflow-wrap: break-word;
+  }
+  
+  #box {
+    background: #f4f4f4;
+    height: 400px; 
+    padding: 15px;
+    overflow-y: scroll;
+    text-align: justify;
+    border: 2px solid black;
+    border-radius: 15px;
     box-shadow:
-      0 9px 33px rgba(0, 0, 0, 0.07);
-      min-width: 1008px;
-min-height: 100px;
-float: left;
-margin: auto;
-display: flex;
-flex-direction: row;
-overflow: hidden;
-white-space:normal; word-break: break-all;
-}
-.fac{
-
-display: flex;
-align-items: left;
-justify-content: left;
-padding-left: 20px;
-
-}
-.feed{
-
-display: flex;
-align-items: left;
-justify-content: left;
-margin-left: 40px;
-text-align: left;
-white-space: normal;
+      5 90px 50px rgba(0, 0, 0, 0.07);
+    min-width: 550px;
+    min-height: 200px;
+  width: 100px;
+  text-overflow: ellipsis; 
+margin-left: 70px;
 
 }
 
-.buttonF {
-width: 200px;
-height: 40px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
+  .table-head{
+    
+      background: #E5E4E2;
+      box-shadow: none;
+      color: #fff;
+      font-weight: 600;
+      line-height: 5px;
+        box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+        width: 500px;
+        margin: auto;
+        border-radius: 20px;
+  }
+  .table-head .table-cell{
+      border-right: none;
+  }
+  .table-cell{
+      display: table-cell;
+      width: 20%;
+      text-align: center;
+      padding: 4px 0;
+      border-right: 1px solid #838996;
+      vertical-align: middle;
+  }
+  .first-cell{
+      text-align: left;
+      padding-left: 10px;
+      width: 8%;
+  }
+  .last-cell{
+      border-right: none;
+      width: 15px;
+  }
+  /* a{
+      textdecoration: none;
+      color: #555;
+  } */
+  p{
+    font-size: 17px;
+    color: black;
+  }
+  .listTitle{
+    font-size: 20px;
+    text-align: center;
+  }
+  @media only screen and (max-width: 600px) {
+    .table-row {
+      font-size: 11px;
+      margin: auto;
+    }
+  }
+  .trow-list{
+        display:inline-block;
+      width: 70%;
+     
+      font-family: sans-serif;
+      background: transparent;
+      padding: 10px 0;
+      margin: auto;
+   
+  
+  
+  }
+  .modal1{
+    font-size: 21px;
+    font-weight: 300;
+    text-align: left;
+ 
+  }
+  .modal2{
+    font-size: 20px;
+    text-align: left;
+    line-height: 25px;
+  }
+  div.item {
+  
+      vertical-align: auto;
+      display: inline-block;
+  
+      text-align: center;
+  
+      width: 120px;
+  }
+  
+  .caption {
+  
+      display: block;
+  }
+  .item{
+    width:200px;
+    text-align:center;
+    display:block;
+    background-color: transparent;
+    border: 1px solid transparent;
+    margin-right: 10px;
+    margin-bottom: 1px;
+    float:left;
+  }
+  
+  #index-gallery{
+    width:465px;
+  }
+
+	.form_container {
+		margin-top: 20px;
+	}
+
+	#form-title {
+		color: #fff;
+
+	}
+
+	.login_btn {
+		width: 100%;
+		background: #48444c!important;
+		color: white !important;
+	}
+
+	.login_btn:focus {
+		box-shadow: none !important;
+		outline: 0px !important;
+	}
+
+	.login_container {
+		padding: 0 2rem;
+	}
+
+  /* <--------- FOR BUTTON SA FEEDBAK ----->  */
+  .table-head1{
+    
+    background:  #d8c090;
+    box-shadow: none;
+    color: #fff;
+    font-weight: 600;
+    line-height: 1px;
+      box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+      width: 300px;
+      margin-left: 20px;
+      border-radius: 20px;
+}
+.table-head1 .table-cell1{
+    border-right: none;
+}
+.table-cell1{
+    display: table-cell;
+   
+}
+.first-cell1{
+    text-align: left;
+    padding-left: 10px;
+    width: 8%;
+}
+.buttons{
+  width: 200px;
+  height: auto;
+  border: 5em;
+  cursor: pointer;
+  outline: none;
+  font-size: 16px;
+  -webkit-transform: translate(0);
+  transform: translate(0);
+  background-image: linear-gradient(45deg, #98b4ac, #d8c090);
+  padding: 0.7em 2em;
+  border-radius: 65px;
+  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+  -webkit-transition: box-shadow 0.25s;
+  transition: box-shadow 0.25s;
+  color: white;
+}
+.buttons .text {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(45deg, #d8c090, #98b4ac);
+}
+
+.buttons:after {
+  content: "";
+  border-radius: 18px;
+  position: absolute;
+  margin: 4px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  background: #E5E4E2;
+}
+
+.buttons:hover {
+  background-image: linear-gradient(-45deg, #98b4ac, #d8c090);
+  box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
+}
+
+.buttons:hover .text {
+  background-image: linear-gradient(-45deg, #d8c090, #98b4ac);
 }
 .Pbox{
   font-size: 19px;
@@ -102,9 +263,9 @@ outline: none;
   
 }
 .rowText{
-  font-size: 23px;
-  min-width: 900px;
-  padding: 10px;
+  font-size: 20px;
+
+  margin: 25px;
 }
 .image{
   max-width: 320px;
@@ -152,14 +313,16 @@ form.cleanForm p {
 margin-bottom:15px;
 }
 .fac{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
+
+display: flex;
+align-items: center;
+justify-content: center;
+
 }
 
 .buttonF {
   position: fixed;
+
 width: 100%;
 min-width: 1320px;
 height: 60px;
@@ -176,9 +339,64 @@ box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
-  }
-</style>
+}
+.card1 {
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  min-height: 500px;
+  border-radius: 5px;
+  margin-left: 500px;
 
+/* margin: auto;
+  text-align: center; */
+  overflow: hidden;
+  background-color:whitesmoke;
+}
+@media screen and (max-width: 320px) {
+  .header__search {
+    width: 70%;
+  }
+  .card1{
+    width: 70%;
+  }
+}
+.wrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+
+.button {
+  margin: 0 auto;
+  width: 160px;
+  height: 30px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #d8c090;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  }
+
+.button:hover {
+  background-color: #95B9C7;
+  box-shadow: 0px 15px 20px #C9C0BB;
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+</style>
+<br>
 <div class="fac">
   <button type="submit" class="buttonF">Feedback Information</button>
 </div>
@@ -187,43 +405,21 @@ outline: none;
 
 {% for object in student %}
 <br> 
+
+<br>
 <div class="card1">
   <form action="#" class="cleanForm" method="POST">
     <br>
-    
-    <div class="column">
-    <div class="row">  
-    <img class="image"
-    src="https://openclipart.org/download/247324/abstract-user-flat-1.svg"  
-    > 
-    <br>
-    <p class="pText"><b class="bText">Students Name: &nbsp;</b>{{object.lastname}}, {{object.firstname}}</p> 
-    <p class="pText"><b class="bText">Students ID Number: &nbsp;</b>{{object.studnumber}}</p>
-    
-    
-    
-    <div>
-    <p class="rowText">
-  <b>Feedback stated below</b>
+             <div>
+               <h3 style="text-align: justify; margin-left:8px; font-size: 20px;"><i>The Feedback</i></h3>
+               <br> <br>
+    <p class="rowText"> 
+      <i>Feedback stated below:</i>
     <div id="box">
-    <li style="font-size: 21px; padding: 10px;"><b>{{object.feedback}}</b></li>
+      <li class="Pbox" style="text-align: justify; margin-left:8px;"><b>{{object.feedback}}</b></li>
     </div>
     </p>
-    </div>
-    
-
-    </div>
-    </div>
-    <br> <br> <br> <br> <br> <br> <br> <br> 
-    
-    <div class="column">
-    <div class="row1"> 
-    <p class="pText"><b class="bText">Degree Program: &nbsp;</b>{{object.degree_program}}</p>
-    &nbsp;    &nbsp;   
-    </div>
-    
-    </div>
-    
+    </div>    
     </form>
     
 </div>
