--- a/templates/counselor/view_feedback.html
+++ b/templates/counselor/view_feedback.html
@@ -158,9 +158,12 @@ View Feedback
           display: block;
           text-align: center;
       }
+          tr:nth-child(odd):hover td {
+    background:#C1C3D1;
+  }
   }
   .table_head{
-    font-size: 14px;
+    font-size: 17px;
   }
 
     .button {
@@ -222,16 +225,18 @@ text-align: center;
           <th class="table_head">Date</th>
           <th class="table_head">ID Number</th>
           <th class="table_head">Students Name</th>
+          <th class="table_head">Degree Program</th>
           <th class="table_head">Information</th>
       </tr>
       </thead>
       {% for object in student reversed %}
       <tbody>
       <tr>
-          <td>{{object.date}}</td>
-          <td>{{object.studnumber}}</td>
-          <td>{{object.lastname}}, &nbsp; {{object.firstname}}</td>
-          <td><a href="{% url 'counselor_view_detail_feedback' object.id %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
+          <td style="font-size: 16px;">{{object.date}}</td>
+          <td style="font-size: 16px;">{{object.studnumber}}</td>
+          <td style="font-size: 16px;">{{object.degree_program}}</td>
+          <td style="font-size: 16px;">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
+          <td style="font-size: 16px;"><a href="{% url 'counselor_view_detail_feedback' object.id %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
         
       </tr>
       <tbody>
