--- a/templates/teacher/notification.html
+++ b/templates/teacher/notification.html
@@ -1,7 +1,7 @@
 {% extends "teacher/teacher_home.html" %}
 
 {% block title %} 
- Faculty load
+Notification
 {% endblock %} 
 {% block content %}
 <style>
@@ -205,7 +205,7 @@ outline: none;
 <center><b><p>No Notifications Yet!</p></b></center>
 
 {% endif %}
-
+<br>
     <table id="customers">
     
     
